# bevy_space_invaders

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  bacon.toml  flake.nix
.cargo/: config.toml
bvspcinv-backend/: Cargo.toml  schema.sql
bvspcinv-backend/src/: main.rs
client/: Cargo.toml
client/src/: game.rs  main.rs  window.rs
client/src/game/: cell.rs  level.rs  player.rs  projectile.rs  ui.rs
client/src/game/enemy/: invader.rs  ufo.rs
client/src/game/enemy/invader/: movement.rs  shooting.rs
client/src/game/enemy/invader/movement/: direction.rs
client/src/game/menu/: leaderboard.rs
client/src/game/player/: actions.rs
client/src/game/player/actions/: moving.rs  shooting.rs
server/: Cargo.toml
server/src/: db.rs  main.rs
src/: asset_loader.rs  camera.rs  enemy.rs  game.rs  game_time.rs  main.rs  menu.rs  player.rs  projectile.rs  score.rs  window.rs
src/enemy/: explosion.rs  invader.rs  ufo.rs
src/game/: cell.rs  enemy.rs  level.rs  menu.rs  player.rs  projectile.rs  ui.rs
src/game/enemy/: invader.rs  ufo.rs
src/game/enemy/invader/: movement.rs  shooting.rs
src/game/enemy/invader/movement/: direction.rs
src/game/enemy/invader/shooting/: probability.rs
src/game/menu/: game_over.rs  leaderboard.rs
src/game/player/: actions.rs
src/game/player/actions/: moving.rs  shooting.rs
src/menu/: button.rs  home.rs  settings.rs
src/menu/settings/: vsync.rs
utils/: Cargo.toml
utils/src/: lib.rs
