[package]
name = "bevy_space_invaders"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/KP64/bevy_space_invaders"
readme = "README.md"
keywords = ["game", "space", "invaders", "bevy", "rankings"]
categories = ["games"]
description = "A Space Invaders Clone made using Bevy."

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

[dependencies]
bevy = { version = "0.13", features = ["dynamic_linking", "wav"] }
bevy-inspector-egui = "0.23"
bevy_mod_debugdump = "0.10"
bevy_rand = { version = "0.5", features = ["rand_chacha"] }
bevy_rapier2d = { version = "0.25", features = [
    "debug-render-2d",
    "simd-stable",
    "parallel",
] }
bevy_screen_diagnostics = "0.5"
image = "0.24"
itertools = "0.12"
leafwing-input-manager = "0.13"
rand = "0.8"
winit = "0.29"


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
