[workspace]
members = ["client", "server", "utils"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/KP64/bevy_space_invaders"
readme = "README.md"
keywords = ["game", "space", "invaders", "bevy", "rankings"]
categories = ["games"]
description = "A Space Invaders Clone made using Bevy."

[workspace.dependencies]
utils = { path = "utils" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }
type_complexity = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
