[package]
name = "bvspcinv-backend"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde.workspace = true
shuttle-rocket = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
sqlx.workspace = true
utils.workspace = true

[lints]
workspace = true
