[package]
name = "client"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking", "wayland", "wav"] }
bevy-inspector-egui = "0.23"
bevy_lunex = { git = "https://github.com/bytestring-net/bevy_lunex.git" }
bevy_mod_debugdump = "0.10"
bevy_rand = { version = "0.5", features = ["rand_chacha"] }
bevy_rapier2d = { version = "0.25", features = [
    "debug-render-2d",
    "simd-stable",
    "parallel",
] }
bevy_screen_diagnostics = "0.5"
bevy_simple_text_input = "0.6"
image = "0.25"
itertools = "0.12"
leafwing-input-manager = "0.13"
serde.workspace = true
serde_json.workspace = true
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "blocking"] }
utils.workspace = true
winit = "0.29"

[lints]
workspace = true
