[package]
name = "server"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
anyhow = "1"
dotenvy = "0.15.7"
rocket = { version = "0.5.0", features = ["json"] }
serde.workspace = true
serde_json.workspace = true
surrealdb = "1.3.1"
utils.workspace = true

[lints]
workspace = true
