[package]
name = "utils"
version.workspace = true
edition.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
serde.workspace = true
sqlx.workspace = true

[lints]
workspace = true
